# local-coding-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp.json  pyproject.toml  requirements.txt  sources.yaml
docs/: python-data-structures.md  pytorch-basics.md
guide/: example-flows.md  setup.md  troubleshooting.md  usage.md
plans/: 2026-07-02-agentic-search-plan.md  2026-07-14-run-anywhere-plan.md  2026-07-19-attachments-windows-portability-fix.md  2026-07-19-manifest-test-isolation-fix.md  2026-07-19-windows-hardening-followups.md
src/: agent.py  agent_tools.py  ask.py  attachments.py  code_chunker.py  docs_cli.py  eval_learning.py  eval_retrieval.py  eval_routing.py  fetch_docs.py  fs_policy.py  ingest.py  ingest_code.py  manifest.py  mcp_client.py  paths.py  project_versions.py  rag.py  rerank.py  ui.py
tests/: conftest.py  golden.yaml  golden_code.yaml  learning_rubric.yaml  routing_cases.yaml  test_agent.py  test_agent_confirm.py  test_agent_docs_tool.py  test_agent_mcp.py  test_agent_session.py  test_agent_tools.py  test_agent_write_tools.py  test_ask.py  test_ask_attachments.py  test_ask_code.py  test_ask_ui.py  test_attachments.py  test_budget.py  test_chunking.py  test_code_chunker.py  test_code_retrieval.py  test_codex_fixes.py  test_config.py  test_crawl.py  test_docs_provenance.py  test_docs_status.py  test_env_file.py  test_eval_learning.py  test_eval_retrieval.py  test_eval_routing.py  test_export.py  test_failure_paths.py  test_fetch_docs.py  test_fs_policy.py  test_grounding.py  test_guide.py  test_hybrid.py  test_incremental.py  (+15 more)
(+35 files in other folders)
